# earthkit

./: .gitignore  README.md  pyrightconfig.json
client/: .eslintrc.cjs  bun.lockb  justfile  middleware.ts  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
client/app/: actions.tsx  footer.tsx  globals.css  layout.tsx  page.tsx
client/app/agent/: page.tsx
client/app/api/feedback/: route.ts
client/app/api/osmnl/: prompting.ts  route.ts
client/app/api/uploadthing/: core.ts
client/app/api/usage/: route.ts
client/app/calibrate/: page.tsx
client/app/comb/: combStore.ts  geo-import.tsx  inout.ts  lablView.tsx  mock.ts  page.tsx  table.tsx  viewPanel.tsx
client/app/geoclip/: page.tsx
client/app/login/: actions.ts  page.tsx
client/app/osm/: actions.tsx  chat-messages.tsx  chatbox.tsx  cm_common.tsx  osmState.ts  page.tsx  searchSuggestions.ts
client/app/playground/: page.tsx
client/app/satellite/: page.tsx
client/app/sift/: actions.tsx  cols.tsx  geo-import.tsx  inout.ts  lablView.tsx  lmm.tsx  mock.ts  page.tsx  sample_dat.json  siftStore.ts  table.tsx  viewPanel.tsx
client/app/streetview/: data.tsx  page.tsx
client/components/: chat-messages.tsx  chatbox.tsx  embed-map.tsx  help.tsx  kbar.tsx  keyboard.tsx  map.tsx  markdown-render.tsx  navbar.tsx  ops.tsx  pill.tsx  profile.tsx  resource_bar.tsx  sidebar.tsx  streetview-pano.tsx  suggestion-renderer.tsx  suggestions.ts  usagebar.tsx
client/components/icons/: mapMarker.tsx
client/components/magicui/: heroVideoDialog.tsx
client/components/operations/: geoclip.tsx  satellite.tsx  streetview.tsx
client/components/operations/widgets/: imageUpload.tsx  searchBox.tsx
client/components/styles/: tiptap.css
client/components/ui/: button.tsx  data-table.tsx  dropdown-menu.tsx  hover-card.tsx  select.tsx  table.tsx
client/components/widgets/: InfoBar.tsx  imageUpload.tsx  ops.tsx  searchBox.tsx
client/lib/: api.ts  combStore.ts  constants.ts  db.ts  geo.ts  globals.tsx  layers.ts  nominatim.ts  osm_lang.ts  progress_manager.ts  prompting.ts  react_utils.ts  resource.ts  rpc.ts  siftStore.ts  store.ts  uploadthing.ts  utils.ts
client/lib/api-client/: api.ts  schema.d.ts
client/lib/overpass/: README.md  common.ts  endpoint.ts  endpoints.ts  index.ts  manager.ts  overpass.ts  status.ts  types.ts
client/lib/supabase/: client.ts  middleware.ts  server.ts
client/public/: keys.json
client/src/: App.tsx  main.tsx
client/testing_resources/: sample_pnt.json
client/tests/: io.test.ts  sample_buildings.json
ml/: .gitignore  Dockerfile.endpoint  Dockerfile.geoclip  README.md  justfile  pyproject.toml
ml/notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pano_cropping.ipynb  streetview_sampling.ipynb  try_geoclip.ipynb  try_salad.ipynb
ml/osm/: Untitled.ipynb  Untitled1.ipynb  embed.py  keys.pkl  tags.json  tags.pkl
ml/osm/dataset/: dataset.dev.bbox  dataset.dev.diff_len_nl  dataset.dev.diff_len_query  dataset.dev.diff_num_results  dataset.dev.diff_train_sim_nl  dataset.dev.diff_train_sim_oqo  dataset.dev.diff_xml_components  dataset.dev.nl  dataset.dev.query  dataset.test.bbox  dataset.test.diff_len_nl  dataset.test.diff_len_query  dataset.test.diff_num_results  dataset.test.diff_train_sim_nl  dataset.test.diff_train_sim_oqo  dataset.test.diff_xml_components  dataset.test.nl  dataset.test.query  dataset.train.bbox  dataset.train.nl  dataset.train.query
ml/playground/: aios_try.py  basic_otel.py  fapi_try.py  otel.py  rgen.py
ml/scripts/: deploy.py
ml/src/: __init__.py  auth.py  cfig.py  common.py  crossview.py  db.py  endpoint.py  geo.py  geoclip_inference.py  google_map_downloader.py  messages.py  modal_otel.py  orienternet.py  otel.py  rpc.py  satellite.py  schema.py  stream_utils.py  streetview.py  streetview_dl.py  streetview_dl_old.py  timmod.py  try_ws.py  tst.py  tst_modal.py  utils.py  vercel_blob.py  vpr.py
ml/src/bench/: down_img.py  gclip_inference.py  load_geoclip.py
ml/src/geoclip_mod/: gclip.py  gclip_dump_coords.py  gclip_fast.py  gclip_retr.py  image_encoder.py  server.py  tsfm.py
ml/src/lmm/: __init__.py  lmm.py  mm_utils.py  prompting.py
ml/src/maploc/: __init__.py  demo.py
ml/src/maploc/utils/: io.py
ml/src/ml/: __init__.py  geoclip_inference.py
ml/src/streetview/: __init__.py  download.py  search.py
notes/: bench_model_loading.sh  cropping.md  osm_composition.md
(+1 files in other folders)
