[project]
name = "ml"
version = "0.1.0"
description = "EarthKit!"
authors = [{ name = "Jett Chen", email = "jettchen12345@gmail.com" }]
dependencies = [
    "geoclip>=1.2.0",
    "pandas>=2.2.2",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "geojson>=3.1.0",
    "ruff>=0.4.0",
    "shapely>=2.0.4",
    "ipykernel>=6.29.4",
    "pyproject-local-kernel>=0.5.5",
    "python-dotenv>=1.0.1",
    "geopy>=2.4.1",
    "modal>=0.62.98",
    "pytorch-lightning>=2.2.3",
    "pytorch-metric-learning>=2.5.0",
    "torchmetrics>=1.0.3",
    "timm>=0.9.16",
    "matplotlib>=3.8.4",
    "fastapi>=0.110.3",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "pyequilib>=0.5.8",
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "openai>=1.30.4",
    "pinecone-client>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.6",
    "ipykernel>=6.29.4",
    "jupyterlab-vim>=4.1.3",
    "pydeck>=0.8.0",
    "py-spy>=0.3.14",
    "uvicorn>=0.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
